@@ -55,6 +55,12 @@ From 1.6.2 to 1.8:
   The new channel naming for PRI channels is:
   DAHDI/i<span>/<number>[:<subaddress>]-<sequence-number>
 
+* The ChanIsAvail application has been changed so the AVAILSTATUS variable
+  no longer contains both the device state and cause code. The cause code
+  is now available in the AVAILCAUSECODE variable. If existing dialplan logic
+  is written to expect AVAILSTATUS to contain the cause code it needs to be
+  changed to use AVAILCAUSECODE.
+
 From 1.6.1 to 1.6.2:
 
 * The firmware for the IAXy has been removed from Asterisk.  It can be
